specs/stage/web/identity/accounts/accounts.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts
  namespace: ilink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: accounts
    spec:
      containers:
        - name: accounts
          image: eu.gcr.io/task-monit-1599295644751/ilink-identity-accounts-app-entrypoint:f6ac71e-1653659093002
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
