specs/stage/web/identity/accounts/accounts.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounts
  namespace: ilink
  labels:
    app: accounts
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: accounts
