specs/stage/web/identity/accounts/accounts.gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: accounts
  namespace: ilink
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ilink-accounts-tls
      hosts:
        - 'accounts.ilink.pw'
