specs/stage/web/identity/accounts/accounts.virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: accounts
  namespace: ilink
spec:
  hosts:
    - 'accounts.ilink.pw'
  gateways:
    - accounts
  http:
    - route:
        - destination:
            host: accounts
            port:
              number: 3000
